so um basically
i forgor to commit
ended up working out because the result is way nicer

--- a/app/pyvenv.cfg
+++ b/app/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\dmose\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
+home = C:\Users\tivb\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
 include-system-site-packages = false
 version = 3.11.5
-executable = C:\Users\dmose\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe
-command = C:\Users\dmose\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe -m venv C:\Users\dmose\OneDrive\Documents\GitHub\intro-to-html-Tritical1\app
+executable = C:\Users\tivb\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe
+command = C:\Users\tivb\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe -m venv C:\Users\tivb\Documents\GitHub\intro-to-html-Tritical1\app
